--- a/package.json
+++ b/package.json
@@ -24,6 +24,7 @@
     "joi": "^17.9.2",
     "mongoose": "^7.3.1",
     "morgan": "^1.10.0",
+    "netlify-lambda": "^2.0.16",
     "nodemon": "^2.0.22",
     "xss-clean": "^0.1.4"
   }
